fix: 수정된 테스트에 만족하는 기능 구현
- docs: 게시글 API 관련 swagger 문서화

- docs: Spring Boot version 3.0.6에 호환하는 라이브러리 의존성 수정