@@ -1,21 +1,21 @@
 package com.techbloghub.core.post.application;
 
+import com.techbloghub.common.domain.pagination.PagedResponse;
 import com.techbloghub.core.blog.domain.Blog;
 import com.techbloghub.core.post.application.dto.PostCreateRequest;
 import com.techbloghub.core.post.domain.Post;
 import com.techbloghub.core.post.domain.PostRepository;
 import com.techbloghub.core.post.presentation.dto.PostResponse;
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -25,9 +25,9 @@ public class PostService {
 
     @Transactional(readOnly = true)
     @Cacheable(cacheNames = "post", key = "#pageable.pageNumber + '-' + #pageable.pageSize + '-' + #pageable.sort.toString()")
-    public List<PostResponse> findAll(Pageable pageable) {
-        Page<Post> page = postRepository.findAll(pageable);
-        return PostResponse.of(page.getContent());
+    public PagedResponse<PostResponse> findAll(Pageable pageable) {
+        Page<Post> posts = postRepository.findAll(pageable);
+        return convertPagedResponse(mapPostResponse(posts), posts);
     }
 
     @Transactional
@@ -38,14 +38,20 @@ public class PostService {
     @Transactional
     public void registerPost(List<PostCreateRequest> requests) {
         requests.stream()
-                .map(request -> new Post(
-                        request.getBlog(),
-                        request.getLink(),
-                        request.getTitle(),
-                        request.getPostedAt(),
-                        request.getDescription()))
-                .collect(Collectors.toList())
-                .forEach(this::registerPost);
+            .map(request -> new Post(
+                request.getBlog(),
+                request.getLink(),
+                request.getTitle(),
+                request.getPostedAt(),
+                request.getDescription()))
+            .toList()
+            .forEach(this::registerPost);
+    }
+
+    private List<PostResponse> mapPostResponse(Page<Post> posts) {
+        return posts.stream()
+            .map(PostResponse::of)
+            .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
@@ -53,4 +59,16 @@ public class PostService {
         Optional<Post> latestPost = postRepository.findLatestPost(blog);
         return latestPost.map(Post::getPublishAt);
     }
+
+    private PagedResponse<PostResponse> convertPagedResponse(
+        List<PostResponse> postResponses, Page<Post> posts) {
+        return new PagedResponse<>(
+            postResponses,
+            posts.getNumber(),
+            posts.getTotalPages(),
+            posts.getTotalElements(),
+            posts.getSize()
+        );
+    }
+
 }
